--- a/webapp/docker-compose.local.yml
+++ b/webapp/docker-compose.local.yml
@@ -14,7 +14,15 @@ services:
       db:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-I", "http://localhost:18080/api/health_check", "-X", "GET"]
+      test:
+        [
+          "CMD",
+          "curl",
+          "-I",
+          "http://localhost:18080/api/health_check",
+          "-X",
+          "GET",
+        ]
       interval: 5s
       timeout: 10s
       retries: 10
@@ -34,7 +42,15 @@ services:
       backend:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-I", "http://localhost:13000/health-check", "-X", "GET"]
+      test:
+        [
+          "CMD",
+          "curl",
+          "-I",
+          "http://localhost:13000/health-check",
+          "-X",
+          "GET",
+        ]
       interval: 5s
       timeout: 10s
       retries: 10
@@ -58,7 +74,17 @@ services:
     networks:
       - webapp-network
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-u", "root", "-p$$MYSQL_ROOT_PASSWORD"]
+      test:
+        [
+          "CMD",
+          "mysqladmin",
+          "ping",
+          "-h",
+          "127.0.0.1",
+          "-u",
+          "root",
+          "-p$$MYSQL_ROOT_PASSWORD",
+        ]
       interval: 5s
       timeout: 30s
       retries: 10
@@ -71,6 +97,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx/nginx.local.conf:/etc/nginx/nginx.conf
+      - ./logs/nginx:/var/log/nginx
     networks:
       - webapp-network
     depends_on:
