--- a/webapp/mysql/conf.d/my.cnf
+++ b/webapp/mysql/conf.d/my.cnf
@@ -1,3 +1,6 @@
 [mysqld]
 lower_case_table_names=1
 secure_file_priv="/docker-entrypoint-initdb.d/csv"
+slow_query_log
+slow_query_log_file = /var/log/mysql-slow.sql
+long_query_time = 5
