--- a/webapp/backend/Cargo.toml
+++ b/webapp/backend/Cargo.toml
@@ -20,6 +20,8 @@ futures-util = "0.3.30"
 log = "0.4.22"
 actix-files = "0.6.6"
 simplelog = "0.11"
+image = "0.24"
+bytes = "1.1"
 
 [build-dependencies]
 syn = "1"
