--- a/webapp/nginx/nginx.local.conf
+++ b/webapp/nginx/nginx.local.conf
@@ -1,8 +1,20 @@
 events {
-    worker_connections 1024;
+    worker_connections 4096;  # 必要に応じて増加
+    multi_accept on;
 }
+worker_processes auto;  # 自動的に利用可能なCPUコア数に設定
 
 http {
+    # timeout設定を長くする
+    proxy_connect_timeout 30s;
+    proxy_send_timeout 30s;
+    proxy_read_timeout 30s;
+
+    # keep 少し処理が進むようになった。-> runnningの処理が最後まで進むようになった
+    # keepalive_timeout 20; #だと、runningの処理が途中で止まる
+    keepalive_timeout 65;
+    keepalive_requests 100;
+
     upstream frontend {
         server frontend:13000;
     }
@@ -15,6 +27,7 @@ http {
         listen 80;
 
         location / {
+            index login;
             proxy_pass http://frontend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
