fix: nginxのevents　process数を追加

--- a/webapp/nginx/nginx.conf
+++ b/webapp/nginx/nginx.conf
@@ -1,6 +1,8 @@
 events {
-    worker_connections 1024;
+    worker_connections 1024;  # 必要に応じて増加
+    multi_accept on;
 }
+worker_processes auto;  # 自動的に利用可能なCPUコア数に設定
 
 http {
     upstream frontend {
