--- a/webapp/nginx/nginx.conf
+++ b/webapp/nginx/nginx.conf
@@ -35,6 +35,18 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+        # 静的ファイルに対するキャッシュ設定
+        location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+            expires 1y;
+            add_header Cache-Control "public, max-age=31536000";
+        }
+
+        # HTMLファイルに対するキャッシュ設定
+        location ~* \.(html)$ {
+            expires 1h;
+            add_header Cache-Control "public, max-age=3600";
+        }
     }
     
     server {
@@ -43,4 +55,3 @@ http {
         return 301 https://$host$request_uri;
     }
 }
-
