--- a/webapp/nginx/nginx.conf
+++ b/webapp/nginx/nginx.conf
@@ -37,7 +37,7 @@ http {
         }
 
         # 静的ファイルに対するキャッシュ設定
-        location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+        location ~* \.(jpg|jpeg|png|gif|ico|css)$ {
             expires 1y;
             add_header Cache-Control "public, max-age=31536000";
         }
